--- a/index.html
+++ b/index.html
@@ -593,17 +593,20 @@ async function confirmAssign() {
     if(confirm(`ทบทวนรายการ:\nมอบหมายงานให้: ${drvName}\nยืนยันหรือไม่?`)) {
         toggleLoad(true);
         try {
-            await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ 
-                action: "assign_driver", 
-                booking_id: currentBookingIdToAssign, 
-                assign_driver_id: drvId 
-            }) });
+            const res = await fetch(ENDPOINT, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ 
+                    action: "assign_driver", 
+                    booking_id: currentBookingIdToAssign, 
+                    assign_driver_id: drvId 
+                })
+            }).then(r => r.json());
             closeAssignModal();
             alert("มอบหมายงานเรียบร้อย");
             await showHistory();
         } catch (err) {
             alert("เกิดข้อผิดพลาด: " + err);
-        } finally {
             toggleLoad(false);
         }
     }
