--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
       
     <label>⏱ ระยะเวลาใช้งานโดยประมาณ</label>
     <select id="duration">
-      <option value="1">1 ชั่วโมง</option>
+      <option value="0.5">30 นาที</option>
+      <option value="1" selected>1 ชั่วโมง</option>
       <option value="1.5">1.30 ชั่วโมง</option>
       <option value="2">2 ชั่วโมง</option>
       <option value="2.5">2.30 ชั่วโมง</option>
@@ -227,7 +228,8 @@
 
     <label>⏱ ระยะเวลาใช้งาน</label>
     <select id="edit_duration">
-      <option value="1">1 ชั่วโมง</option>
+      <option value="0.5">30 นาที</option>
+      <option value="1" selected>1 ชั่วโมง</option>
       <option value="1.5">1.30 ชั่วโมง</option>
       <option value="2">2 ชั่วโมง</option>
       <option value="2.5">2.30 ชั่วโมง</option>
